# tg-cli

./: README.md  SKILL.md  pyproject.toml
src/tg_cli/: client.py  config.py
src/tg_cli/cli/: _output.py  _sync.py  main.py  query.py  tg.py
tests/: conftest.py  test_cli.py  test_client.py  test_output.py
