[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tg-cli"
version = "0.3.0"
description = "Telegram CLI — monitor chats, search messages, AI analysis"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
authors = [{ name = "jackwener", email = "jakevingoo@gmail.com" }]
keywords = ["telegram", "tg", "cli", "chat", "monitor"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Communications :: Chat",
    "Topic :: Utilities",
]
dependencies = [
    "telethon>=1.36",
    "click>=8.0",
    "rich>=13.0",
    "python-dotenv>=1.0",
]

[project.urls]
Homepage = "https://github.com/jackwener/tg-cli"
Repository = "https://github.com/jackwener/tg-cli"
Issues = "https://github.com/jackwener/tg-cli/issues"

[project.optional-dependencies]
ai = ["anthropic>=0.40"]
dev = ["pytest>=8.0", "pytest-asyncio>=0.24"]
all = ["tg-cli[ai]"]

[project.scripts]
tg = "tg_cli.cli.main:cli"

[tool.hatch.build.targets.wheel]
packages = ["src/tg_cli"]

[tool.hatch.build.targets.sdist]
include = ["src/tg_cli"]

[tool.pytest.ini_options]
addopts = "-v"
